crates/dora-compiler/src/dora/tests/snapshots/dora_compiler__dora__tests__operations__push_extstaticcall.snap
---
source: crates/dora-compiler/src/dora/tests/operations.rs
expression: op
---
module {
  func.func private @dora_fn_nop()
  func.func private @dora_fn_tracing(!llvm.ptr, i8, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_write_result(!llvm.ptr, i64, i64, i64, i8)
  func.func private @dora_fn_is_static(!llvm.ptr) -> i8
  func.func private @dora_fn_exp(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_keccak256_hasher(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_calldata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_calldata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_calldata_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_data_load(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_data_section(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_data_section_size(!llvm.ptr) -> i64
  func.func private @dora_fn_data_section_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_chainid(!llvm.ptr) -> i64
  func.func private @dora_fn_callvalue(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_caller(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gasprice_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_selfbalance_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_blobbasefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gaslimit_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extend_memory(!llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_memory_ptr(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_memory_size(!llvm.ptr) -> i64
  func.func private @dora_fn_code_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_sload(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_sstore(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_append_log(!llvm.ptr, i64, i64)
  func.func private @dora_fn_append_log_with_one_topic(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_append_log_with_two_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_three_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_four_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_origin(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_coinbase(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_block_number(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extcodesize(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_address(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_prevrando(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_timestamp_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_basefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_balance(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_copy(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_blob_hash(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_block_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_eofcreate(!llvm.ptr, i8, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returncontract(!llvm.ptr, i8, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_call(!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_create(!llvm.ptr, i64, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_create2(!llvm.ptr, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_extcall_addr_validate(!llvm.ptr, !llvm.ptr) -> i8
  func.func private @dora_fn_extcall(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_returndata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returndata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_returndata_copy(!llvm.ptr, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_selfdestruct(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_tload(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_tstore(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_func_stack_push(!llvm.ptr, i64, i64) -> i8
  func.func private @dora_fn_func_stack_pop(!llvm.ptr) -> i64
  func.func private @dora_fn_func_stack_grow(!llvm.ptr)
  func.func private @dora_fn_set_resume(!llvm.ptr, i32)
  func.func private @dora_fn_get_resume(!llvm.ptr) -> i32
  func.func private @op251(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr, %arg4: !llvm.ptr) -> i8 {
    cf.br ^bb3
  ^bb1(%0: i8):  // 12 preds: ^bb3, ^bb4, ^bb5, ^bb6, ^bb7, ^bb8, ^bb10, ^bb11, ^bb12, ^bb16, ^bb19, ^bb20
    %c0_i64 = arith.constant 0 : i64
    %1 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64, %c0_i64, %1, %0) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %0 : i8
  ^bb2(%2: i8):  // no predecessors
    return %2 : i8
  ^bb3:  // pred: ^bb0
    %3 = llvm.load %arg1 : !llvm.ptr -> i64
    %c0_i64_0 = arith.constant 0 : i64
    call @dora_fn_nop() : () -> ()
    %4 = arith.cmpi uge, %3, %c0_i64_0 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %4, ^bb14, ^bb1(%c80_i8 : i8)
  ^bb4:  // pred: ^bb14
    %5 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %6 = llvm.getelementptr %5[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %7 = llvm.load %6 : !llvm.ptr -> i256
    llvm.store %6, %arg4 : !llvm.ptr, !llvm.ptr
    %8 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %9 = llvm.getelementptr %8[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %10 = llvm.load %9 : !llvm.ptr -> i256
    llvm.store %9, %arg4 : !llvm.ptr, !llvm.ptr
    %11 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %12 = llvm.getelementptr %11[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %13 = llvm.load %12 : !llvm.ptr -> i256
    llvm.store %12, %arg4 : !llvm.ptr, !llvm.ptr
    %c0_i256 = arith.constant 0 : i256
    %c1_i256 = arith.constant 1 : i256
    %14 = llvm.alloca %c1_i256 x i256 : (i256) -> !llvm.ptr
    llvm.store %c0_i256, %14 {alignment = 1 : i64} : i256, !llvm.ptr
    %c1_i256_1 = arith.constant 1 : i256
    %15 = llvm.alloca %c1_i256_1 x i256 : (i256) -> !llvm.ptr
    llvm.store %7, %15 {alignment = 1 : i64} : i256, !llvm.ptr
    %16 = call @dora_fn_extcall_addr_validate(%arg0, %15) : (!llvm.ptr, !llvm.ptr) -> i8
    %c0_i8 = arith.constant 0 : i8
    %17 = arith.cmpi ne, %16, %c0_i8 : i8
    cf.cond_br %17, ^bb1(%16 : i8), ^bb5
  ^bb5:  // pred: ^bb4
    %c18446744073709551615_i256 = arith.constant 18446744073709551615 : i256
    %18 = arith.cmpi ugt, %13, %c18446744073709551615_i256 : i256
    %c84_i8 = arith.constant 84 : i8
    cf.cond_br %18, ^bb1(%c84_i8 : i8), ^bb6
  ^bb6:  // pred: ^bb5
    %19 = arith.trunci %13 : i256 to i64
    %c0_i64_2 = arith.constant 0 : i64
    %20 = arith.cmpi slt, %19, %c0_i64_2 : i64
    %c84_i8_3 = arith.constant 84 : i8
    cf.cond_br %20, ^bb1(%c84_i8_3 : i8), ^bb7
  ^bb7:  // pred: ^bb6
    %c18446744073709551615_i256_4 = arith.constant 18446744073709551615 : i256
    %21 = arith.cmpi ugt, %10, %c18446744073709551615_i256_4 : i256
    %c84_i8_5 = arith.constant 84 : i8
    cf.cond_br %21, ^bb1(%c84_i8_5 : i8), ^bb8
  ^bb8:  // pred: ^bb7
    %22 = arith.trunci %10 : i256 to i64
    %c0_i64_6 = arith.constant 0 : i64
    %23 = arith.cmpi slt, %22, %c0_i64_6 : i64
    %c84_i8_7 = arith.constant 84 : i8
    cf.cond_br %23, ^bb1(%c84_i8_7 : i8), ^bb9
  ^bb9:  // pred: ^bb8
    %c0_i64_8 = arith.constant 0 : i64
    %24 = arith.cmpi ne, %19, %c0_i64_8 : i64
    cf.cond_br %24, ^bb16, ^bb10
  ^bb10:  // 2 preds: ^bb9, ^bb18
    %25 = call @dora_fn_is_static(%arg0) : (!llvm.ptr) -> i8
    %c0_i8_9 = arith.constant 0 : i8
    %26 = arith.cmpi ne, %25, %c0_i8_9 : i8
    %c0_i256_10 = arith.constant 0 : i256
    %27 = arith.cmpi ne, %c0_i256, %c0_i256_10 : i256
    %28 = arith.andi %26, %27 : i1
    %c86_i8 = arith.constant 86 : i8
    cf.cond_br %28, ^bb1(%c86_i8 : i8), ^bb11
  ^bb11:  // pred: ^bb10
    %29 = llvm.load %arg1 : !llvm.ptr -> i64
    %c2_i8 = arith.constant 2 : i8
    %30 = call @dora_fn_extcall(%arg0, %15, %14, %22, %19, %29, %c2_i8) : (!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i8) -> !llvm.ptr
    %31 = llvm.getelementptr %30[16] : (!llvm.ptr) -> !llvm.ptr, i8
    %32 = llvm.load %31 : !llvm.ptr -> i64
    %33 = llvm.getelementptr %30[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %34 = llvm.load %33 : !llvm.ptr -> i8
    %c0_i8_11 = arith.constant 0 : i8
    %35 = arith.cmpi ne, %34, %c0_i8_11 : i8
    cf.cond_br %35, ^bb1(%34 : i8), ^bb12
  ^bb12:  // pred: ^bb11
    %36 = llvm.getelementptr %30[8] : (!llvm.ptr) -> !llvm.ptr, i8
    %37 = llvm.load %36 : !llvm.ptr -> i64
    %38 = llvm.load %arg1 : !llvm.ptr -> i64
    %39 = arith.cmpi ult, %38, %37 : i64
    scf.if %39 {
    } else {
      %69 = arith.subi %38, %37 : i64
      llvm.store %69, %arg1 : i64, !llvm.ptr
    }
    %c80_i8_12 = arith.constant 80 : i8
    cf.cond_br %39, ^bb1(%c80_i8_12 : i8), ^bb13
  ^bb13:  // pred: ^bb12
    %40 = arith.extui %32 : i64 to i256
    %41 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    llvm.store %40, %41 : i256, !llvm.ptr
    %42 = llvm.getelementptr %41[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %42, %arg4 : !llvm.ptr, !llvm.ptr
    cf.br ^bb15
  ^bb14:  // pred: ^bb3
    %43 = arith.subi %3, %c0_i64_0 : i64
    llvm.store %43, %arg1 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb15:  // pred: ^bb13
    %c0_i8_13 = arith.constant 0 : i8
    return %c0_i8_13 : i8
  ^bb16:  // pred: ^bb9
    %44 = arith.addi %22, %19 : i64
    %c0_i64_14 = arith.constant 0 : i64
    %45 = arith.cmpi slt, %44, %c0_i64_14 : i64
    %c84_i8_15 = arith.constant 84 : i8
    cf.cond_br %45, ^bb1(%c84_i8_15 : i8), ^bb17
  ^bb17:  // pred: ^bb16
    %c31_i64 = arith.constant 31 : i64
    %c32_i64 = arith.constant 32 : i64
    %46 = arith.addi %44, %c31_i64 : i64
    %47 = arith.divui %46, %c32_i64 : i64
    %c32_i64_16 = arith.constant 32 : i64
    %48 = arith.muli %47, %c32_i64_16 : i64
    %49 = call @dora_fn_memory_size(%arg0) : (!llvm.ptr) -> i64
    %c31_i64_17 = arith.constant 31 : i64
    %c32_i64_18 = arith.constant 32 : i64
    %50 = arith.addi %49, %c31_i64_17 : i64
    %51 = arith.divui %50, %c32_i64_18 : i64
    %52 = arith.muli %51, %c32_i64_16 : i64
    %53 = arith.cmpi ult, %52, %48 : i64
    cf.cond_br %53, ^bb19, ^bb18
  ^bb18:  // 2 preds: ^bb17, ^bb21
    cf.br ^bb10
  ^bb19:  // pred: ^bb17
    %c3_i64 = arith.constant 3 : i64
    %c512_i64 = arith.constant 512 : i64
    %54 = arith.muli %51, %51 : i64
    %55 = arith.divui %54, %c512_i64 : i64
    %56 = arith.muli %51, %c3_i64 : i64
    %57 = arith.addi %55, %56 : i64
    %c3_i64_19 = arith.constant 3 : i64
    %c512_i64_20 = arith.constant 512 : i64
    %58 = arith.muli %47, %47 : i64
    %59 = arith.divui %58, %c512_i64_20 : i64
    %60 = arith.muli %47, %c3_i64_19 : i64
    %61 = arith.addi %59, %60 : i64
    %62 = arith.subi %61, %57 : i64
    %63 = llvm.load %arg1 : !llvm.ptr -> i64
    %64 = arith.cmpi ult, %63, %62 : i64
    scf.if %64 {
    } else {
      %69 = arith.subi %63, %62 : i64
      llvm.store %69, %arg1 : i64, !llvm.ptr
    }
    %c80_i8_21 = arith.constant 80 : i8
    cf.cond_br %64, ^bb1(%c80_i8_21 : i8), ^bb20
  ^bb20:  // pred: ^bb19
    %65 = call @dora_fn_extend_memory(%arg0, %48) : (!llvm.ptr, i64) -> !llvm.ptr
    %66 = llvm.getelementptr %65[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %67 = llvm.load %66 : !llvm.ptr -> i8
    %c0_i8_22 = arith.constant 0 : i8
    %68 = arith.cmpi ne, %67, %c0_i8_22 : i8
    cf.cond_br %68, ^bb1(%67 : i8), ^bb21
  ^bb21:  // pred: ^bb20
    cf.br ^bb18
  }
  func.func public @call(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr) -> i8 attributes {llvm.emit_c_interface} {
    %c0_i64 = arith.constant 0 : i64
    %0 = llvm.alloca %c0_i64 x !llvm.ptr : (i64) -> !llvm.ptr
    llvm.store %arg2, %0 : !llvm.ptr, !llvm.ptr
    cf.br ^bb10
  ^bb1(%1: i8):  // 7 preds: ^bb2, ^bb6, ^bb7, ^bb8, ^bb10, ^bb11, ^bb13
    %c0_i64_0 = arith.constant 0 : i64
    %2 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_0, %c0_i64_0, %2, %1) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %1 : i8
  ^bb2(%3: i256):  // no predecessors
    %c89_i8 = arith.constant 89 : i8
    cf.switch %3 : i256, [
      default: ^bb1(%c89_i8 : i8)
    ]
  ^bb3(%4: i8):  // 2 preds: ^bb9, ^bb15
    return %4 : i8
  ^bb4(%5: i32):  // no predecessors
    llvm.unreachable
  ^bb5:  // no predecessors
    llvm.unreachable
  ^bb6:  // pred: ^bb10
    %6 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %7 = arith.cmpi uge, %6, %c3_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %7, ^bb12, ^bb1(%c80_i8 : i8)
  ^bb7:  // pred: ^bb11
    %8 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64_1 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %9 = arith.cmpi uge, %8, %c3_i64_1 : i64
    %c80_i8_2 = arith.constant 80 : i8
    cf.cond_br %9, ^bb14, ^bb1(%c80_i8_2 : i8)
  ^bb8:  // pred: ^bb13
    %10 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64_3 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %11 = arith.cmpi uge, %10, %c3_i64_3 : i64
    %c80_i8_4 = arith.constant 80 : i8
    cf.cond_br %11, ^bb16, ^bb1(%c80_i8_4 : i8)
  ^bb9:  // pred: ^bb15
    %12 = call @op251(%arg0, %arg1, %arg2, %arg3, %0) : (!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr) -> i8
    %13 = arith.cmpi ne, %12, %c0_i8_5 : i8
    cf.cond_br %13, ^bb3(%12 : i8), ^bb17
  ^bb10:  // pred: ^bb0
    %c0_i8 = arith.constant 0 : i8
    %c0_i8_5 = arith.constant 0 : i8
    %14 = arith.cmpi ne, %c0_i8, %c0_i8_5 : i8
    cf.cond_br %14, ^bb1(%c0_i8 : i8), ^bb6
  ^bb11:  // pred: ^bb12
    %c1_i256 = arith.constant 1 : i256
    %15 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c1_i256, %15 : i256, !llvm.ptr
    %16 = llvm.getelementptr %15[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %16, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_6 = arith.constant 0 : i8
    %17 = arith.cmpi ne, %c0_i8_6, %c0_i8_5 : i8
    cf.cond_br %17, ^bb1(%c0_i8_6 : i8), ^bb7
  ^bb12:  // pred: ^bb6
    %18 = arith.subi %6, %c3_i64 : i64
    llvm.store %18, %arg1 : i64, !llvm.ptr
    cf.br ^bb11
  ^bb13:  // pred: ^bb14
    %c32_i256 = arith.constant 32 : i256
    %19 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c32_i256, %19 : i256, !llvm.ptr
    %20 = llvm.getelementptr %19[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %20, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_7 = arith.constant 0 : i8
    %21 = arith.cmpi ne, %c0_i8_7, %c0_i8_5 : i8
    cf.cond_br %21, ^bb1(%c0_i8_7 : i8), ^bb8
  ^bb14:  // pred: ^bb7
    %22 = arith.subi %8, %c3_i64_1 : i64
    llvm.store %22, %arg1 : i64, !llvm.ptr
    cf.br ^bb13
  ^bb15:  // pred: ^bb16
    %c64_i256 = arith.constant 64 : i256
    %23 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c64_i256, %23 : i256, !llvm.ptr
    %24 = llvm.getelementptr %23[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %24, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_8 = arith.constant 0 : i8
    %25 = arith.cmpi ne, %c0_i8_8, %c0_i8_5 : i8
    cf.cond_br %25, ^bb3(%c0_i8_8 : i8), ^bb9
  ^bb16:  // pred: ^bb8
    %26 = arith.subi %10, %c3_i64_3 : i64
    llvm.store %26, %arg1 : i64, !llvm.ptr
    cf.br ^bb15
  ^bb17:  // pred: ^bb9
    %c0_i64_9 = arith.constant 0 : i64
    %c2_i8 = arith.constant 2 : i8
    %27 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_9, %c0_i64_9, %27, %c2_i8) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %c2_i8 : i8
  }
}
